--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,9 @@
 {
-  "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "name": "Python API Only",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
     "codespaces": {
-      "openFiles": [
-        "README.md",
-        "streamlit.py"
-      ]
+      "openFiles": ["api.py"]
     },
     "vscode": {
       "settings": {},
@@ -17,17 +13,13 @@
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-  "postAttachCommand": {
-    "server": "streamlit run streamlit.py --server.enableCORS false --server.enableXsrfProtection false"
-  },
+  "updateContentCommand": "pip install fastapi uvicorn && echo '✅ API dependencies installed'",
+  "postAttachCommand": "uvicorn api:app --host 0.0.0.0 --port 8000 --reload",
   "portsAttributes": {
-    "8501": {
-      "label": "Application",
+    "8000": {
+      "label": "FastAPI",
       "onAutoForward": "openPreview"
     }
   },
-  "forwardPorts": [
-    8501
-  ]
+  "forwardPorts": [8000]
 }
